--- a/DreamHouse/DreamHouse/DreamHouse.csproj
+++ b/DreamHouse/DreamHouse/DreamHouse.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <Compile Include="Dream.Master.cs">
       <DependentUpon>Dream.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Dream.Master.designer.cs">
       <DependentUpon>Dream.Master</DependentUpon>
